@@ -1,6 +1,7 @@
 7/5/15 started 8.1.0
 - add vips_premultiply(), vips_unpremultiply()
 - change the alpha range rules for vips_flatten() to match vips_premultiply()
+- vipsthumbnail uses vips_resize() rather than its own code
 
 4/5/15 started 8.0.2
 - fix a refcount error in C++ wrapper, thanks huskier
